# project_nekomata

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Assets/: abstractart.ktx2
src/: main.cpp
src/core/containers/: atomic_bitmap_index_allocator.hpp  double_buffer.hpp  freelist_pool.hpp  freelist_pool.ixx  mpsc_queue.hpp  sparse_set_storage.hpp
src/core/ecs/: component_pool.hpp  component_pool.ixx  ecs.hpp  entity.hpp  script_base.hpp
src/core/ecs/world/: camera.hpp  renderable.hpp  transform.hpp
src/core/log/: log.hpp
src/core/math/: base_matrix.hpp  consts.hpp  matrix_types.hpp  prelude.hpp  quaternion.hpp  raddeg.hpp  transform3d.hpp
src/core/platform/: int_def.hpp  sdl.cpp  sdl.hpp  thread.hpp
src/core/runtime/: entry.cpp  entry.hpp  graphicsthread.cpp  graphicsthread.hpp  mainthread.cpp  mainthread.hpp  shared_data.cpp  shared_data.hpp  shared_data.ixx
src/core/ui/: ui_node.hpp
src/core/ui/components/: ui_rect.hpp  ui_text.hpp  ui_texture.hpp
src/graphics/cmd_alloc/: cmd_alloc.cpp  cmd_alloc.hpp
src/graphics/fontsystem/: dynamic_font_atlas.cpp  dynamic_font_atlas.hpp  font_face.cpp  font_face.hpp  font_manager.cpp  font_manager.hpp
src/graphics/meshsystem/: mesh_asset_storage.cpp  mesh_asset_storage.hpp
src/graphics/meshsystem/loader/: mesh_loader.cpp
src/graphics/meshsystem/pool/: mesh_pool.cpp  mesh_pool.hpp
src/graphics/rendering/: frame_context.cpp  frame_context.hpp  frame_context.ixx  frame_rendering_resources.cpp  frame_rendering_resources.hpp  shared_rendering_resources.cpp  shared_rendering_resources.hpp  transient_rendering_resources.cpp  transient_rendering_resources.hpp
src/graphics/shaders/: bitmap_font.slang  bitmap_font_broken_on_amd.slang  primitive_viz.slang  triangle.slang
src/graphics/srt/: bindless_descriptor_set_srt.cpp  bindless_descriptor_set_srt.hpp  shader_resource_table.hpp  shader_resource_table.ixx  srt_consts.hpp
src/graphics/texturesystem/: sampler_cache.cpp  sampler_cache.hpp  sampler_cache.ixx  texture_manager.cpp  texture_manager.hpp  texture_manager.ixx  texture_to_shader_index_table.cpp  texture_to_shader_index_table.hpp
src/graphics/texturesystem/loader/: ktx_loader.cpp  ktx_loader.hpp
src/graphics/vulkan/: context.cpp  context.hpp  deletion_queue.cpp  deletion_queue.hpp  spv_shader_code.cpp  spv_shader_code.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_commands.cpp  vk_commands.hpp  vk_commands_barriers.hpp  vk_descriptor_pool.cpp  vk_descriptor_pool.hpp  vk_descriptor_set.cpp  vk_descriptor_set.hpp  vk_descriptor_set_layout.cpp  vk_descriptor_set_layout.hpp  vk_dynamic_loader_storage.cpp  vk_gpu_obrm.hpp  vk_gpu_obrm_structs.cpp  vk_gpu_obrm_structs.hpp  vk_image.cpp  vk_image.hpp  vk_image_trait.hpp  vk_image_view.cpp  vk_image_view.hpp  vk_physical_device_props.cpp  vk_physical_device_props.hpp  vk_pipeline_graphics.cpp  vk_pipeline_graphics.hpp  vk_pipeline_graphics.ixx  vk_pipeline_layout.cpp  vk_pipeline_layout.hpp  vk_queue.cpp  vk_queue.hpp  vk_queue_family_swizzling.cpp  vk_queue_family_swizzling.hpp  vk_sampler.cpp  vk_sampler.hpp  vk_swapchain.cpp  (+3 more)
src/graphics/vulkan/shadercache/: pipeline_binary_frontend.hpp  pipeline_binary_frontend.ixx
src/graphics/vulkan/sync_primitives/: binary_semaphore.cpp  binary_semaphore.hpp  fence.cpp  fence.hpp  timeline_semaphore.cpp  timeline_semaphore.hpp
